--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "agentkeepalive": "^4.1.4",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "chokidar": "^3.6.0",
     "core-js": "^3.9.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1"
